Bugfix: Only export action mapping if it has trigger elements that are not in the trash. Bugfix: Only export parameter mapping if it has an action mapping that is not in the trash.